# social-app

./: .gitignore  docker-compose.yml
backend/: main.py  pyproject.toml
backend/src/: config.py  main.py
backend/src/auth/: model.py  schemas.py  utils.py  views.py
backend/src/auth/interfaces/: repository.py
backend/src/auth/repositories/: auth_repository.py
backend/src/auth/schemas/: endpoint_schema.py  model_schema.py
backend/src/auth/services/: auth_service.py
backend/src/core/: base_schema.py
backend/src/database/: engine.py
backend/src/middleware/: auth.py
backend/src/post/: model.py  schemas.py  services.py  views.py
backend/src/post/interfaces/: repository.py
backend/src/post/repositories/: post_repository.py
backend/src/post/schemas/: endpoint_schema.py  model_schema.py
backend/src/post/services/: post_service.py
backend/src/profile/: model.py  schemas.py  views.py
backend/src/profile/interfaces/: repository.py
backend/src/profile/repositories/: profile_repository.py
backend/src/profile/schemas/: endpoint_schema.py  model_schema.py
backend/src/profile/services/: profile_service.py
docker/api/: Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts
