[tool.poetry]
name = "social-app"
version = "0.1.0"
description = ""
authors = ["Marcin Niemczyk <m_niemczyk@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
SQLAlchemy = "^2.0.27"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
